# abi-inspector

./: README.md  pyproject.toml
abi_inspector/: main.py
